--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "format": "biome format --write"
     },
     "dependencies": {
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tabs": "^1.1.13",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.542.0",
@@ -19,6 +21,7 @@
         "next-themes": "^0.4.6",
         "react": "19.1.0",
         "react-dom": "19.1.0",
+        "react-icons": "^5.5.0",
         "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
