--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
         "format": "biome format --write"
     },
     "dependencies": {
+        "@auth/mongodb-adapter": "^3.10.0",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.13",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.542.0",
+        "mongodb": "^6.19.0",
+        "mongoose": "^8.18.0",
+        "nanoid": "^5.1.5",
         "next": "15.5.2",
         "next-auth": "5.0.0-beta.29",
         "next-themes": "^0.4.6",
@@ -27,6 +32,7 @@
     "devDependencies": {
         "@biomejs/biome": "2.2.0",
         "@tailwindcss/postcss": "^4",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
